# outbox

./: Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: test.yml
examples/: README.md  example.py
examples/delayed_retries/: ARCHITECTURE.md  README.md  consumer.py  docker-compose.yml  outbox_delayed_retries_demo.db  producer.py  relay.py  requirements.txt  run_demo.sh
src/benchmarks/: README.md  celery_benchmark.py  outbox_benchmark.py
src/example/: entrypoint.py  tasks.py
src/examples/: example.py
src/outbox/: __init__.py  database.py  emitter.py  log.py  message_relay.py  metrics.py  publisher.py  utils.py  worker.py
src/outbox/scripts/: message_relay.py  worker.py
src/tests/: conftest.py  test_emitter.py  test_message_relay.py  test_outbox.py  test_publisher.py  test_utils.py  test_worker.py  utils.py
tests/: conftest.py  test_outbox.py  utils.py
