[project]
name = "outbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Konstantinos Bairaktaris", email = "ikijob@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "aio-pika>=9.5.5",
  "pydantic>=2.11.5",
  "sqlalchemy[asyncio]>=2.0.41",
]

[project.scripts]
message_relay = "outbox.scripts.message_relay:main"
worker = "outbox.scripts.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "aiosqlite>=0.21.0",
  "asyncpg>=0.30.0",
  "ptipython>=1.0.1",
  "pudb>=2025.1",
  "pynvim>=0.5.2",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.12",
  "testcontainers[rabbitmq]>=4.10.0",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["I"]
